--- a/P1/S3/Ejemplos/tmp-1.html
+++ b/P1/S3/Ejemplos/tmp-1.html
@@ -8,6 +8,6 @@
 </head>
 <body style="background-color:lightblue; color: darkblue;">
     <h1 style="color: black">Encabezado H1</h1>
-    <p style="color: darkred;">Esto es un párrafo</p>
+    <p style="color: darkred; background-color: burlywood;">Esto es un párrafo</p>
 </body>
 </html>
