--- a/P1/S3/Ejemplos/03-hello.html
+++ b/P1/S3/Ejemplos/03-hello.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejemplo 3</title>
     <!-- Hoja de estilo externa -->
-    <link rel="stylesheet" href="03-hello.css">
+    <link rel="stylesheet" href="04-sel-etiqueta.css">
 </head>
 <body>
     <h1>Encabezado h1</h1>
