He editado una pequeña cosa en el ejemplo 4

--- a/P2/ejemplo03.html
+++ b/P2/ejemplo03.html
@@ -7,7 +7,7 @@
     <title>Ejemplo 3</title>
 
     <!-- Ejecutar el código js situado en un fichero externo -->
-    <script src="ej_03.js" defer></script>
+    <script src="Ej_03.js" defer></script>
 </head>
 <body>
     <p>Esto es un párrafo del ejemplo</p>
