--- a/P2/S6/canvas-07.html
+++ b/P2/S6/canvas-07.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canvas 07</title>
     <script src="canvas-07.js" defer></script>
     <link rel="stylesheet" href="canvas-07.css">
+    <title>Canvas 07</title>
 </head>
 <body>
     <h2>Canvas</h2>
